[project]
name = "langgraph-automator"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "edge-tts>=7.2.3",
    "langchain-core>=1.1.0",
    "langchain-ollama>=1.0.0",
    "langgraph>=1.0.4",
    "moviepy>=2.2.1",
    "pillow>=10.0.0",
    "pydantic>=2.12.5",
    "requests>=2.32.5",
    "websocket-client>=1.9.0",
]
